--- a/cxutils.html
+++ b/cxutils.html
@@ -1388,7 +1388,7 @@ Version     : 0.9.9
 
 ProjectStart: 2015-06-20
 
-Latest      : 2018-05-04
+Latest      : 2018-05-26
 
 OS          : Linux
 
@@ -1571,7 +1571,7 @@ getNextMonday<pre class="listing"><span class="Identifier">echo</span>  <span cl
     <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
 <p>showRandomCard</p>
-<p>shows a random card at xpos , default is centered </p>
+<p>shows a random card at xpos from the cards set in cxconstant.nim, default is centered </p>
 
 
 </dd>
@@ -1581,7 +1581,7 @@ getNextMonday<pre class="listing"><span class="Identifier">echo</span>  <span cl
     <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
 <p>ruler</p>
-<p>simple terminal ruler indicating dot x positions to give a feedback</p>
+<p>simple terminal ruler indicating dot x positions starts with position 1</p>
 <p>horizontal --&gt; vert = false</p>
 <p>for vertical   --&gt; vert = true</p>
 <p>see cxDemo and cxTest for more usage examples</p>
@@ -1956,7 +1956,7 @@ full cjk unicode range returned in a seq<pre class="listing"><span class="Keywor
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-05-21 13:14:06 UTC</small>
+        <small>Made with Nim. Generated: 2018-05-26 10:09:03 UTC</small>
       </div>
     </div>
   </div>
