--- a/cxprint.html
+++ b/cxprint.html
@@ -1419,7 +1419,7 @@ Status      : stable
 
 License     : MIT opensource
 
-Latest      : 2018-04-26
+Latest      : 2018-05-26
 
 Compiler    : Nim &gt;= 0.18.x dev branch
 
@@ -1903,7 +1903,7 @@ forward declaration
     <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
 <p>printCxLine</p>
-<p>prints a horizontal for frames or other use with or without text , with or without brackets around the text as specified in an Cxline object the underlaying CxLine object is still further developed. cxline object is defined in cxglobal.nim see cxlineobjectE1.nim for an example </p>
+<p>prints a horizontal line for frames or other use with or without text , with or without brackets around the text as specified in an Cxline object the underlaying CxLine object is still further developed. cxline object is defined in cxglobal.nim see cxlineobjectE1.nim for an example </p>
 
 
 </dd>
@@ -1929,6 +1929,7 @@ forward declaration
 <dd>
 <p>dotyLn</p>
 <p>prints number d of widedot ⏺  style dots in given fore/background color and issues new line</p>
+<p>may not be available on all systems</p>
 <p>each dot is of char length 4</p>
 
 
@@ -2170,7 +2171,7 @@ forward declaration
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-05-21 13:14:16 UTC</small>
+        <small>Made with Nim. Generated: 2018-05-26 10:09:13 UTC</small>
       </div>
     </div>
   </div>
