--- a/cxutils.html
+++ b/cxutils.html
@@ -1359,6 +1359,14 @@ function main() {
   </ul>
 </li>
 <li>
+  <a class="reference reference-toplevel" href="#15" id="65">Iterators</a>
+  <ul class="simple simple-toc-section">
+      <li><a class="reference" href="#reverseIter.i,openArray[T]"
+    title="reverseIter[T](a: openArray[T]): T"><wbr />reverse<wbr />Iter<span class="attachedType" style="visibility:hidden"></span></a></li>
+
+  </ul>
+</li>
+<li>
   <a class="reference reference-toplevel" href="#18" id="68">Templates</a>
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#getCard.t,"
@@ -1895,6 +1903,17 @@ full cjk unicode range returned in a seq<pre class="listing"><span class="Keywor
 </dd>
 
 </dl></div>
+<div class="section" id="15">
+<h1><a class="toc-backref" href="#15">Iterators</a></h1>
+<dl class="item">
+<dt id="reverseIter"><a name="reverseIter.i,openArray[T]"></a><pre><span class="Keyword">iterator</span> <span class="Identifier">reverseIter</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">a</span><span class="Other">:</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">T</span></pre></dt>
+<dd>
+reverse iterator<pre class="listing"><span class="Keyword">let</span> <span class="Identifier">a</span> <span class="Operator">=</span> <span class="Identifier">createseqfloat</span><span class="Punctuation">(</span><span class="DecNumber">10</span><span class="Punctuation">)</span>
+<span class="Keyword">for</span> <span class="Identifier">b</span> <span class="Keyword">in</span> <span class="Identifier">reverse</span><span class="Punctuation">(</span><span class="Identifier">a</span><span class="Punctuation">)</span><span class="Punctuation">:</span> <span class="Identifier">echo</span> <span class="Identifier">b</span></pre>
+
+</dd>
+
+</dl></div>
 <div class="section" id="18">
 <h1><a class="toc-backref" href="#18">Templates</a></h1>
 <dl class="item">
@@ -1902,9 +1921,9 @@ full cjk unicode range returned in a seq<pre class="listing"><span class="Keywor
 <dd>
 <p>getCard</p>
 <p>gets a random card from the Cards seq</p>
-<pre class="listing"><span class="Keyword">import</span> <span class="Identifier">nimcx</span>
-<span class="Identifier">print</span><span class="Punctuation">(</span><span class="Identifier">getCard</span><span class="Punctuation">(</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="Identifier">randCol</span><span class="Punctuation">(</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="Identifier">xpos</span> <span class="Operator">=</span> <span class="Identifier">centerX</span><span class="Punctuation">(</span><span class="Punctuation">)</span><span class="Punctuation">)</span>  <span class="Comment"># get card and print in random color at xpos</span>
-<span class="Identifier">doFinish</span><span class="Punctuation">(</span><span class="Punctuation">)</span></pre>
+<pre class="listing">import nimcx
+print(getCard(),randCol(),xpos = centerX())  # get card and print in random color at xpos
+doFinish()</pre>
 
 </dd>
 <dt id="bitCheck"><a name="bitCheck.t,untyped,untyped"></a><pre><span class="Keyword">template</span> <span class="Identifier">bitCheck</span><span class="Other">(</span><span class="Identifier">a</span><span class="Other">,</span> <span class="Identifier">b</span><span class="Other">:</span> <span class="Identifier">untyped</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span></pre></dt>
@@ -1956,7 +1975,7 @@ full cjk unicode range returned in a seq<pre class="listing"><span class="Keywor
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-05-26 10:09:03 UTC</small>
+        <small>Made with Nim. Generated: 2018-05-31 08:23:34 UTC</small>
       </div>
     </div>
   </div>
