--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <h3>
 <a id="current-projects-" class="anchor" href="#current-projects-" aria-hidden="true"><span class="octicon octicon-link"></span></a>Current Projects :</h3>
 
-<p><a href="https://github.com/qqtop/NimCx">cx</a></p>
+<p><a href="https://github.com/qqtop/NimCx">nimcx</a></p>
 
 <p>An easy to use library to bring better colors to the Linux terminal
 as well as many utility procs. Include cx in your projects and
@@ -60,9 +60,15 @@ enjoy higher productivity and fun.</p>
 
 <p>Current items include:  </p>
 
-<pre><code>   private      more colors for the terminal and many utility procs
+<pre><code>   
    geodistance  calculate distance between two locations
    indo8        utility for quick translation in a linux terminal
+   cxnimble     quick lister of nimble packages
+   stackex      what is going on at stackex, a quick feed lister
+   scanWifi     check the wifi around you
+   nimcolors    available colors
+   portcheck    what port is busy listening to where
+   and more ...
 </code></pre>
 
 <p><a href="https://github.com/qqtop/LanguageProjects">LanguageProjects</a>
