--- a/cxglobal.html
+++ b/cxglobal.html
@@ -1429,6 +1429,8 @@ function main() {
     title="unidecodeU(ustring: untyped): untyped"><wbr />unidecode<wbr />U<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#*.t,string,int"
     title="`*`(s: string; n: int): untyped"><wbr />`*`<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#toki.t,untyped"
+    title="toki(s: untyped): untyped"><wbr />toki<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#tw.t,"
     title="tw(): int"><wbr />tw<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#th.t,"
@@ -2109,6 +2111,15 @@ partially lifted from an earler macro in terminal.nim and removed new line
 returns input string  n times mimicking python
 
 </dd>
+<dt id="toki"><a name="toki.t,untyped"></a><pre><span class="Keyword">template</span> <span class="Identifier">toki</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">untyped</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">untyped</span></pre></dt>
+<dd>
+<p>toki</p>
+<p>tokenizes input string and returns token in a seq[string]</p>
+<pre class="listing"><span class="Keyword">var</span> <span class="Identifier">b</span> <span class="Operator">=</span> <span class="StringLit">&quot;酢の一種&quot;</span>
+<span class="Keyword">let</span> <span class="Identifier">s</span> <span class="Operator">=</span> <span class="Operator">&amp;</span><span class="StringLit">&quot;a + b = 12 3.5% &amp; {b}&quot;</span>
+<span class="Identifier">echo</span> <span class="Identifier">toki</span><span class="Punctuation">(</span><span class="Identifier">s</span><span class="Punctuation">)</span></pre>
+
+</dd>
 <dt id="tw"><a name="tw.t,"></a><pre><span class="Keyword">template</span> <span class="Identifier">tw</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span></pre></dt>
 <dd>
 tw , a global where latest terminal width is always available 
@@ -2344,7 +2355,7 @@ returns a colorpalette which can be used to iterate over</pre>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-05-31 13:49:15 UTC</small>
+        <small>Made with Nim. Generated: 2018-06-06 21:37:53 UTC</small>
       </div>
     </div>
   </div>
